# realtime_spatial_assistant

./: .gitignore  README.md  build_orbslam3_python.sh  config.py  main.py  main_pipeline.py  pyproject.toml  test_slam_import.py
database/: __init__.py
database/postgres/: __init__.py  client.py  models.py
database/qdrant/: __init__.py  client.py
docs/: API.md  BUILD.md  MEMORY.md
language_model/mcp/: tools.py
memory/: __init__.py  memory_pipeline.py  models.py  schema.py  schema.sql
memory/embedding_services/: __init__.py  open_clip.py
memory/perception_services/: __init__.py  ocr.py  segmentation.py  yolo.py
memory/services/: __init__.py  perception.py
pipeline/: __init__.py  action_pipeline.py  memory_pipeline.py  storage_pipeline.py
schema/: __init__.py  action.py  frame_memory.py  storage.py
services/: __init__.py  actionformer.py  open_clip.py  paddle_ocr.py  slowfast.py
slam/: __init__.py  orbslam3_bindings.cpp
test_outputs/: AriaEverydayActivities_1.0.0_loc5_script4_seq7_rec1_preview_rgb_orbslam3.yaml  dataset-slides3_512_16_mono_imu_trajectory.csv
