[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-spatial-assistant-slam"
version = "0.1.0"
description = "ORB-SLAM3 Python bindings packaged for realtime_spatial_assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[tool.setuptools.packages.find]
include = ["slam*"]
